# work-scripts

./: pyproject.toml
app/: config.py  context_schema.py  main.py
app/command/: config.py  ssh.py
app/command_config/: command.py
app/command_ssh/: command.py
app/common/: fs.py
app/database/: __init__.py  base.py  config.py
app/database/models/: __init__.py  example.py
app/database/repositories/: __init__.py  example_repository.py
app/shcema/: context_schema.py
