[project]
name = "work-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "paramiko>=4.0.0",
    "typer>=0.20.0",
    "python-dotenv>=1.0.0",
    "dotenv>=0.9.9",
    "asyncssh>=2.21.1",
    "ruff>=0.14.4",
    "pydantic>=2.12.4",
    "sqlalchemy>=2.0.0",
    "duckdb>=1.0.0",
    "duckdb-engine>=0.9.0",
]

[project.scripts]
app = "app.main:app"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
